--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">android_learning</string>
     <string name="input_login_label">Login</string>
     <string name="input_password_label">Password</string>
+    <string name="start_test_button_text">Начать</string>
+    <string name="test_failed">Не пройден</string>
+    <string name="test_type">На время</string>
 </resources>
