--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="start_test_button_text">Начать</string>
     <string name="test_failed">Не пройден</string>
     <string name="test_type">На время</string>
+    <string name="login_button_text">Войти</string>
 </resources>
