--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="test_passed">Пройден</string>
     <string name="test_type">На время</string>
     <string name="login_button_text">Войти</string>
+    <string name="finish_test_button_text">Завершить тест</string>
+    <string name="test_results_button_text">К тестам</string>
 </resources>
